syntax = "proto3";

package api;

message InitStateRequest {
}

message InitStateResponse {
}

// We have to use strings/bytes for everything since protobuf doesn't support wide enough integers (e.g., addresses
// in ethereum are 160-bit hashes)
message AccountState {
    string nonce = 1;
    string address = 2;
    string balance = 3;
    map<string, string> storage = 4;
    string code = 5;
}

message EthState {
    map<string, AccountState> accounts = 1;
}

message CreateContractRequest {
}

message CreateContractResponse {
}

message MixGenesRequest {
    // Contract parameters
    string matron_genes = 1;
    string sire_genes = 2;
    uint64 target_block = 3;

    // Mining parameters for the VM
    uint64 current_block = 4;
}

message MixGenesResponse {
    string mixed_genes = 1;
}
